// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarView changes tabs correctly 1`] = `
<div
  className="makeStyles-wrapper-1"
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="browse"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Custom"
      value="custom"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Browse />
</div>
`;

exports[`SidebarView changes to cart correctly 1`] = `
<div
  className="makeStyles-wrapper-1"
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="cart"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Custom"
      value="custom"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Cart />
</div>
`;

exports[`SidebarView changes to custom correctly 1`] = `
<div
  className="makeStyles-wrapper-1"
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="custom"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Custom"
      value="custom"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Custom />
</div>
`;

exports[`SidebarView renders correctly 1`] = `
<div
  className="makeStyles-wrapper-1"
>
  <ForwardRef(WithStyles)
    indicatorColor="primary"
    onChange={[Function]}
    textColor="primary"
    value="search"
    variant="fullWidth"
  >
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Search"
      value="search"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Browse"
      value="browse"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Custom"
      value="custom"
    />
    <ForwardRef(WithStyles)
      className="makeStyles-tabWidth-2"
      label="Cart"
      value="cart"
    />
  </ForwardRef(WithStyles)>
  <Search />
</div>
`;
